PROJECT ( TESTS )

# Needed for UnitTest++
#LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../CMake )

SET ( TESTS_SRCS
	main.cc
	c3dfiletests.cc	
	)

FIND_PACKAGE (UnitTest++)

INCLUDE_DIRECTORIES ( ../src/ )

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
  LINKER_LANGUAGE CXX
)

IF ( UnitTest++_FOUND )
	FIND_LIBRARY (UTPP_LIBRARY NAMES UnitTest++ PATHS /usr/lib /usr/local/lib $ENV{UNITTESTXX_PATH} ENV{UNITTESTXX_LIBRARY_PATH})
	ADD_EXECUTABLE ( c3dfiletests ${TESTS_SRCS} )

	INCLUDE_DIRECTORIES ( ${UTPP_INCLUDE_DIRS} )

	SET_TARGET_PROPERTIES ( c3dfiletests PROPERTIES
		LINKER_LANGUAGE CXX
		OUTPUT_NAME runtests
		)

	TARGET_LINK_LIBRARIES ( c3dfiletests
		c3dfile
			${UTPP_LIBRARY}
		)
		
	OPTION (RUN_AUTOMATIC_TESTS "Perform automatic tests after compilation?" OFF)

	IF (RUN_AUTOMATIC_TESTS)
	ADD_CUSTOM_COMMAND (TARGET runtests
		POST_BUILD
		COMMAND ./runtests
		COMMENT "Running automated tests..."
		)
	ENDIF (RUN_AUTOMATIC_TESTS)

ENDIF ( UnitTest++_FOUND )
